# course-dbt

./: pyproject.toml
greenery/: README_ANSWERS.md  README_ANSWERS_WEEK_2.md  README_ANSWERS_WEEK_3.md  README_ANSWERS_WEEK_4.md  dbt_project.yml
greenery/macros/: expand_event_types.sql  test_less_than_or_equal.sql
greenery/models/: exposures.yml
greenery/models/marts/product/: conversion_rate.sql  fact_add_to_cart.sql  fact_checkout.sql  fact_event_types_counts.sql  fact_page_views.sql  funnel_step_counts.sql  models.yml
greenery/models/staging/postgres/: _postgres__models.yml  _postgres__sources.yml
greenery/tests/: delivery_dates.sql
